Corrected layout issues

--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -63,8 +63,9 @@ h1 {
     text-align:center;
     margin-top:5%;
     letter-spacing:0.5vw;
-    font-size:5vw;
+    font-size:50px;
     text-wrap:wrap;
+    margin: 0 30px;
 }
 
 // navigation bar styling
@@ -94,23 +95,35 @@ nav {
     #dropdown_menu {
         display:none;
         position:absolute;
-        border-radius:25%;
         left: 0;
+        margin-top: 5%;
+        border-radius:5%;
         padding: 5% 0;
         min-width: 100%;
         z-index:15;
         height: 50vh;
         align-content:center;
         justify-content:center;
-        overflow:hidden;
         flex-direction: column;
         background-color: white;
+        &:after {
+            content: "";
+            position:absolute;
+            right: 0;
+            top: -7%;
+            width: 0;
+            height: 0;
+            border-left: 9vh solid transparent;
+            // border-right: 3vh solid transparent;
+            border-bottom: 10vh solid white;
+
+        }
         a {
             text-decoration:none;
             color: $lessDark;
             margin: auto;
             &:last-of-type {
-                background-color:$yellow;
+                background-color: $yellow;
                 padding : 8px 7px;
             }
             &:hover {
@@ -140,7 +153,7 @@ nav {
     width: 20vh;
     height: 20vh;
     position:absolute;
-    bottom:30%;
+    bottom:20%;
     align-self:center;
     justify-content:center;
     img {
@@ -448,5 +461,8 @@ nav {
 @media (max-width: 500px) {
     .desktop_nav {
         display : none;
+    }
+    h1 {
+        font-size: 8vw;
     }
 }
